🏑📍 Amend .gitignore to remove Glitch components

--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,3 @@
-<!-- This is a static file -->
-<!-- served from your routes in server.js -->
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,7 +8,6 @@
     <link id="favicon" rel="icon" href="/crew.png" />
     <title>Among Us League!</title>
 
-    <!-- import the webpage's stylesheet -->
     <link rel="stylesheet" href="/style.css" />
     <link
       rel="stylesheet"
@@ -36,7 +33,7 @@
 
     <main class="container">
       <section class="stats">
-        <ul id="stats" style="padding-left: 0;">
+        <ul id="stats">
           <em>loading stats&hellip;</em>
         </ul>
       </section>
