🚉👮 Refactor loading text

--- a/views/index.html
+++ b/views/index.html
@@ -35,7 +35,7 @@
     <main class="container">
       <section class="stats">
         <ul id="stats">
-          <em>loading stats&hellip;</em>
+          <em class="loading">loading stats</em>
         </ul>
       </section>
     </main>
