--- a/views/player.html
+++ b/views/player.html
@@ -33,12 +33,11 @@
     </header>
 
     <main class="container">
+      <em class="loading">loading player</em>
       <div class="single-graph">
         <canvas></canvas>
       </div>
-      <section class="player">
-        <em>loading player&hellip;</em>
-      </section>
+      <section class="player"></section>
     </main>
 
     <footer class="container">
