--- a/public/style.css
+++ b/public/style.css
@@ -56,7 +56,6 @@ code {
 }
 
 canvas {
-  display: block;
   position: relative;
   top: 38px;
   left: 32px;
@@ -77,5 +76,29 @@ footer {
   }
   .single-graph {
     margin-bottom: initial;
+  }
+}
+
+.loading:after {
+  display: inline-block;
+  animation: dotty steps(1, end) 1s infinite;
+  content: "";
+}
+
+@keyframes dotty {
+  0% {
+    content: "";
+  }
+  25% {
+    content: ".";
+  }
+  50% {
+    content: "..";
+  }
+  75% {
+    content: "...";
+  }
+  100% {
+    content: "";
   }
 }
