Make the titles link back to the main page

--- a/views/index.html
+++ b/views/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header class="container">
-      <h1>Among Us League - Season One</h1>
+      <h1><a href="/">Among Us League</a> - Season One</h1>
     </header>
 
     <main class="container">
