--- a/views/player.html
+++ b/views/player.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <header class="container">
-      <h1 id="player-title">Among Us League</h1>
+      <h1 id="player-title"><a href="/">Among Us League</a></h1>
     </header>
 
     <main class="container">
