Fix stats width

--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
       defer
     ></script>
     <script src="/graph.js" defer></script>
-    <script src="/stats.js" defer></script>
+    <script src="/home.js" defer></script>
   </head>
   <body>
     <header class="container">
