--- a/views/index.html
+++ b/views/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="An among us league for my friends." />
-    <link id="favicon" rel="icon" href="/crew.png" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="An among us league for my friends."/>
+    <link id="favicon" rel="icon" href="/crew.png"/>
     <title>Among Us League!</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css"/>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
-    />
+/>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
-    />
+/>
 
     <script
       src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
@@ -29,10 +29,26 @@
   </head>
   <body>
     <header class="container">
-      <h1><a href="/">Among Us League</a> - Season One</h1>
+      <h1>
+        <a href="/">Among Us League</a> - Season One</h1>
     </header>
 
     <main class="container">
+      <details class="elo-explainer">
+        <summary>
+          <i>How are the rankings calculated?</i>
+        </summary>
+        <p>
+          Players have a hidden crew Elo and a hidden imposter Elo. These values increase or decrese depending on the opposing team's average Elo. These two values are then averaged to get a general rating.
+        </p>
+        <p>
+          Q. Why aren't your teammates taken into account?<br>
+          A. Because it leads to Elo inflation.<br>
+          <br>
+          Q. Which matters more: your crew or imposter performance?<br>
+          A. They matter equally.<br>
+         </p>
+      </details>
       <section class="stats">
         <ul id="stats">
           <em class="loading">loading stats</em>
@@ -41,7 +57,9 @@
     </main>
 
     <footer class="container">
-      <i><small>Website dedicated to good crewmates.</small></i>
+      <i>
+        <small>Website dedicated to good crewmates.</small>
+      </i>
     </footer>
   </body>
 </html>
