--- a/views/index.html
+++ b/views/index.html
@@ -24,13 +24,15 @@
       src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
       defer
     ></script>
+    <script src="/stats.js" defer></script>
     <script src="/graph.js" defer></script>
     <script src="/home.js" defer></script>
   </head>
   <body>
     <header class="container">
       <h1>
-        <a href="/">Among Us League</a> - Season One</h1>
+        <a href="/">Among Us League</a>
+      </h1>
     </header>
 
     <main class="container">
@@ -47,12 +49,16 @@
           <br>
           Q. Which matters more: your crew or imposter performance?<br>
           A. They matter equally.<br>
-         </p>
+        </p>
       </details>
+      <label for="season-select">Change season:</label>
+
+      <select name="season" id="season-select" onchange="getStats(this).then(json => load(json))">
+        <option value="current">Current season</option>
+        <option value="0">One</option>
+      </select>
       <section class="stats">
-        <ul id="stats">
-          <em class="loading">loading stats</em>
-        </ul>
+        <ul id="stats"><div class="loading-indicator"></div></ul>
       </section>
     </main>
 
