--- a/views/player.html
+++ b/views/player.html
@@ -1,39 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="An among us league for my friends." />
-    <link id="favicon" rel="icon" href="/crew.png" />
+    <meta charset="utf-8"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta name="description" content="An among us league for my friends."/>
+    <link id="favicon" rel="icon" href="/crew.png"/>
     <title>Among Us League!</title>
 
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/style.css"/>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
-    />
+/>
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&display=swap"
       rel="stylesheet"
-    />
+/>
 
     <script
       src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js"
       defer
     ></script>
+    <script src="/stats.js" defer></script>
     <script src="/graph.js" defer></script>
     <script src="/player.js" defer></script>
   </head>
   <body>
     <header class="container">
-      <h1 id="player-title"><a href="/">Among Us League</a></h1>
+      <h1 id="player-title">
+        <a href="/">Among Us League</a><span id="player-elo"></span>
+      </h1>
     </header>
 
     <main class="container">
-      <em class="loading">loading player</em>
+      <label for="season-select">Change season:</label>
+      <select name="season" id="season-select" onchange="getStats(this).then(json => load(json))">
+        <option value="current">Current season</option>
+        <option value="0">One</option>
+      </select>
+      <div class="loading-indicator"></div>
       <div class="single-graph">
         <canvas></canvas>
       </div>
@@ -41,7 +49,9 @@
     </main>
 
     <footer class="container">
-      <i><small>Website dedicated to good crewmates.</small></i>
+      <i>
+        <small>Website dedicated to good crewmates.</small>
+      </i>
     </footer>
   </body>
 </html>
