Add map to player history

--- a/views/index.html
+++ b/views/index.html
@@ -58,7 +58,9 @@
         <option value="0">One</option>
       </select>
       <section class="stats">
-        <ul id="stats"><div class="loading-indicator"></div></ul>
+        <ul id="stats">
+          <div class="loading-indicator"></div>
+        </ul>
       </section>
     </main>
 
