--- a/views/player.html
+++ b/views/player.html
@@ -31,7 +31,8 @@
   <body>
     <header class="container">
       <h1 id="player-title">
-        <a href="/">Among Us League</a><span id="player-elo"></span>
+        <a href="/">Among Us League</a>
+        <span id="player-elo"></span>
       </h1>
     </header>
 
