Add season stats and deadliest duos

--- a/views/index.html
+++ b/views/index.html
@@ -57,6 +57,7 @@
         <option value="current">Current season</option>
         <option value="0">One</option>
       </select>
+      <p id="season-stats"></p>
       <section class="stats">
         <ul id="stats">
           <div class="loading-indicator"></div>
