--- a/views/player.html
+++ b/views/player.html
@@ -42,6 +42,7 @@
         <option value="current">Current season</option>
         <option value="0">One</option>
       </select>
+      <p id="season-stats"><p>
       <div class="loading-indicator"></div>
       <div class="single-graph">
         <canvas></canvas>
