changing imposter to impostor

--- a/views/index.html
+++ b/views/index.html
@@ -41,13 +41,13 @@
           <i>How are the rankings calculated?</i>
         </summary>
         <p>
-          Players have a hidden crew Elo and a hidden imposter Elo. These values increase or decrese depending on the opposing team's average Elo. These two values are then averaged to get a general rating.
+          Players have a hidden crew Elo and a hidden impostor Elo. These values increase or decrese depending on the opposing team's average Elo. These two values are then averaged to get a general rating.
         </p>
         <p>
           Q. Why aren't your teammates taken into account?<br>
           A. Because it leads to Elo inflation.<br>
           <br>
-          Q. Which matters more: your crew or imposter performance?<br>
+          Q. Which matters more: your crew or impostor performance?<br>
           A. They matter equally.<br>
         </p>
       </details>
