--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -6,6 +6,13 @@
   text-decoration: underline;
 }
 
+.centered {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 @media screen and (max-width: 500px) {
   .season-list {
     display: block !important;
